feat(order): enforce idempotency and improve validation error handling
- Implement idempotency key lookup in OrderService to prevent duplicate orders
- Return existing order on duplicate Idempotency-Key (no side effects)
- Handle IllegalArgumentException in GlobalExceptionHandler with 400 Bad Request
- Validate currency is GBP and amount > 0 in service layer

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
     hibernate:
       ddl-auto: create-drop  # Might have to change for 'validate' later
     show-sql: true
+
+    server:
+      port: 8080
