--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,24 @@ spring:
       ddl-auto: create-drop  # Might have to change for 'validate' later
     show-sql: true
   rabbitmq:
-      host: localhost
-      port: 5672
-      username: guest
-      password: guest
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics
+  endpoint:
+    health:
+      show-details: always
+  health:
+    rabbit:
+      enabled: true
+    db:
+      enabled: true
 
 server:
- port: 8080
+  port: 8080
