test(integration): add end-to-end payment processing integration test and add awaitility dependency for async testing with timeouts

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>rabbitmq</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
